[gd_scene load_steps=15 format=3 uid="uid://b8t31a8vhserc"]

[ext_resource type="Texture2D" uid="uid://df8g53dnx8r6t" path="res://assets/log_fire_UI.png" id="1_nfrom"]
[ext_resource type="Script" uid="uid://de8a2q0a2wbl3" path="res://scripts/start_fire_minigame.gd" id="1_tmktg"]
[ext_resource type="Texture2D" uid="uid://bjuk64vrfk48y" path="res://assets/stick_fire_UI.png" id="2_4upnx"]
[ext_resource type="Texture2D" uid="uid://bhi87gk2o3fxo" path="res://assets/fire_start_spark.png" id="4_pgdnb"]
[ext_resource type="Texture2D" uid="uid://et6eg7m7nwak" path="res://assets/tutorials/unga_bunga.png" id="5_w8kt7"]
[ext_resource type="AudioStream" uid="uid://cckqk8rqvnx8v" path="res://assets/stick_fall.wav" id="6_yl8x4"]
[ext_resource type="AudioStream" uid="uid://b2tecjrqk0bcq" path="res://assets/walk_leaf.wav" id="7_a7k51"]

[sub_resource type="Curve" id="Curve_pgdnb"]
_data = [Vector2(0.393548, 0.91118), 0.0, 0.0, 0, 0, Vector2(0.835484, 0.0279584), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_w8kt7"]
curve = SubResource("Curve_pgdnb")

[sub_resource type="Gradient" id="Gradient_pgdnb"]
offsets = PackedFloat32Array(0, 0.887324)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_w8kt7"]
gradient = SubResource("Gradient_pgdnb")

[sub_resource type="Curve" id="Curve_uoo02"]
_limits = [0.0, 3.0, 0.0, 1.0]
_data = [Vector2(0.0193548, 0.793888), 0.0, 0.0, 0, 0, Vector2(0.977419, 1.55462), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_yl8x4"]
curve = SubResource("Curve_uoo02")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_pgdnb"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 100.0
angle_min = 94.7
angle_max = 398.8
gravity = Vector3(0, -110, 0)
linear_accel_min = -2.23517e-06
linear_accel_max = 47.36
radial_accel_min = -2.23517e-06
radial_accel_max = 19.74
tangential_accel_min = -2.23517e-06
tangential_accel_max = 13.16
scale_min = 3.0
scale_max = 3.0
scale_over_velocity_curve = SubResource("CurveTexture_yl8x4")
color_ramp = SubResource("GradientTexture1D_w8kt7")
alpha_curve = SubResource("CurveTexture_w8kt7")

[node name="Control" type="Control"]
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tmktg")

[node name="Log" type="Sprite2D" parent="."]
position = Vector2(0, 620)
texture = ExtResource("1_nfrom")

[node name="Stick" type="Sprite2D" parent="."]
position = Vector2(-57, 424)
scale = Vector2(0.716667, 0.872222)
texture = ExtResource("2_4upnx")
offset = Vector2(-12.558, 13.758)

[node name="friction_timer" type="Timer" parent="."]
wait_time = 7.0

[node name="input_delay_timer" type="Timer" parent="."]

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(-65, 717)
amount = 3
texture = ExtResource("4_pgdnb")
lifetime = 3.0
explosiveness = 0.28
randomness = 0.17
collision_base_size = 0.0
process_material = SubResource("ParticleProcessMaterial_pgdnb")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 301.0
offset_top = -758.0
offset_right = 901.0
offset_bottom = -390.0
scale = Vector2(1.5, 1.5)
texture = ExtResource("5_w8kt7")

[node name="Friction_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_yl8x4")

[node name="Fire_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_a7k51")

[connection signal="timeout" from="friction_timer" to="." method="_on_friction_timer_timeout"]
[connection signal="timeout" from="input_delay_timer" to="." method="_on_input_delay_timer_timeout"]
